#  Mod:
#        20-Mar-2010, S. Hoobler          (SONYA)
#          release EDT_CL-R2-2-0
#        29-Apr-2009, K. Luchini          (LUCHINI)
#          release EDT_CL-R2-0-0
#        08-Oct-2007, K. Luchini          (LUCHINI):
#          release EDT_CL-R1-3-7
#          release EDT_CL-R1-3-6
#
#==============================================================
#
#
R2.5.0:		    17-Aug-2020 Hugo Slepicka
		    - Modified to build with EPICS 7.

R2.4.0:             07-Mar-2018 Marcio P. Donadio
                    - Modified to build for git workflow and EPICS 3.15.

EDT_CL-R2-3-3:	    Added 'field(PINI,"YES")' to PV from camera13921040.db

EDT_CL-R2-3-2:	    Added several PVs to monitor DAQ

EDT_CL-R2-3-1:	    Addition of PV for controlling the name
	            of the image saved by the IP900CL-12B camera
	            during a DAQ. Added addresses for 2 more NAS servers.
		    TODO: make addresses configurable (PVs)

EDT_CL-R2-3-0:      Major changes to the IP900CL-12B camera support
		    Added option start data acquisition of images
	            and save them to a given directory when
	            finished. A sequencer disables the camera trigger
		    while files are being saved.
		    The image buffer is now per IOC, not per camera,
		    which means only one camera can perform a DAQ.
		    A DAQ is triggered by an EVR event (default to
	  	    event 16 - 0.5Hz).

EDT_CL-R2-2-2:      Modified release file to follow eco.
                    needed to define macros for min() and max()
                    as these were removed from EPICS BASE R3-14-11 and
                    higher. 
      
EDT_CL-R2-2-1:      Reduce ring buffer size of PTM4200 from 10 to 5 to save memory

EDT_CL-R2-2-0:     Build with base-R3-14-8-2-lcls6
                   Build with rtems-4.9.4

EDT_CL-R2-1-1:     Build with base-R3-14-8-2-lcls5
                   Build with rtems-4.9.3

EDT_CL-R2-0-1      Add SMOO record for laser PTM6710CL centroid to lock