@@ -37,7 +37,7 @@
 #include <waveformRecord.h>
 #include <epicsVersion.h>
 
-#if EPICS_VERSION>=3 && EPICS_REVISION>=14
+#if (EPICS_VERSION>=3 && EPICS_REVISION>=14) || EPICS_VERSION >= 7
 #include <epicsExport.h>
 #endif
 
@@ -480,7 +480,7 @@ UP685CL10B_DEV_SUP_SET devLiEDTCL_UP685_10B=  {6, NULL, NULL, init_li,  NULL, re
 UP685CL10B_DEV_SUP_SET devLoEDTCL_UP685_10B=  {6, NULL, NULL, init_lo,  NULL, write_lo,  NULL};
 UP685CL10B_DEV_SUP_SET devWfEDTCL_UP685_10B=  {6, NULL, NULL, init_wf,  NULL, read_wf,  NULL};
 
-#if	EPICS_VERSION>=3 && EPICS_REVISION>=14
+#if	(EPICS_VERSION>=3 && EPICS_REVISION>=14) || EPICS_VERSION >= 7
 epicsExportAddress(dset, devAiEDTCL_UP685_10B);
 epicsExportAddress(dset, devAoEDTCL_UP685_10B);
 epicsExportAddress(dset, devBiEDTCL_UP685_10B);
